[metadata]
name = youranwb
version = 0.2
url = http://1.14.73.45:18089/
license = BSD-3-Clause
maintainer = youranai
maintainer_email = lingyunzi09@gmail.com
description = 微博爬虫API和web
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr
